samples/_failures_safe/1761220943_229dd7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_839f4a19.c: In function ‘main’:
./samples/SAFE/__tmp_839f4a19.c:170:5: error: expected identifier or ‘(’ at end of input
  170 |     TokenStack
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_839f4a19.c:170:5: error: expected declaration or statement at end of input
